--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+/*Common*/
 
 /*Header Begin*/
 #header {
@@ -72,6 +73,7 @@
     top: 55px;
     right: 0;
     display: none;
+    z-index: 1;
 }
 .menu .menu-right .box-search {
     border: 1px solid #000000;
@@ -89,8 +91,48 @@
     padding: 0 10px;
 }
 /*Header End*/
+/*Slide Show Begin*/
 
-
+#slideShow .mySlides {
+    width: 100%;
+    height: 500px;
+    border-radius: 10px;
+    opacity: 0.8;
+}
+/*#slideShow .leftSlide,*/
+/*#slideShow .rightSlide*/
+/*{*/
+/*    position: absolute;*/
+/*    top: 50%;*/
+/*}*/
+/*#slideShow .leftSlide {*/
+/*    left: 30px;*/
+/*}*/
+/*#slideShow .rightSlide {*/
+/*    right: 30px;*/
+/*}*/
+/*#slideShow .leftSlide i,*/
+/*#slideShow .rightSlide i*/
+/*{*/
+/*    padding: 5px;*/
+/*    border: 1px solid #ffffff;*/
+/*    border-radius: 50%;*/
+/*    color: #ffffff;*/
+/*    font-size: 30px;*/
+/*    opacity: 0.7;*/
+/*}*/
+#slideShow .dotList {
+    position: absolute;
+    bottom: 20px;
+    left: 45%;
+}
+#slideShow .dotList .dot {
+    padding: 0px 10px;
+    border: 1px solid #ffffff;
+    border-radius: 50%;
+    margin: 0 10px;
+}
+/*Slide Show End*/
 /*Footer Begin*/
 #footer {
     background: #484952;
