--- a/css/style.css
+++ b/css/style.css
@@ -30,9 +30,11 @@
     50% {color: #0c9129}
     100% {color: #ffffff}
 }
+#header .menu{
+    margin:10px 0 ;
+}
 #header .menu .col-2{
     margin-top: -10px;
-
 }
 #header .menu .menu-right {
     margin-top: 0;
@@ -52,11 +54,9 @@
 .menu .drop-menu .menu-item a {
     color: #000000;
     text-decoration: none;
-    font-weight: bold;
-    opacity: 0.6;
+    font-weight: 700;
 }
 .menu .drop-menu .menu-item:hover a{
-    /*background: #e7e8e9;*/
     background: #f8f8f8;
     color: #1e7e34;
 }
@@ -65,27 +65,29 @@
     flex-direction: row;
 }
 .menu .menu-right .icon-item{
-    padding: 8px;
+    padding:13px 8px 8px 8px;
     font-size: 20px;
-    margin-top: -16px;
+    margin-top: -15px;
 }
-.menu .menu-right .icon-item a {
+.menu .menu-right .icon-item span {
     color: #000000;
-    opacity: 0.6;
+    /*opacity: 0.6;*/
 }
-.menu .menu-right .icon-item:hover a {
+.menu .menu-right .icon-item span:hover {
+    cursor: pointer;
+}
+.menu .menu-right .icon-item:hover span {
     color: #1e7e34;
 }
 .menu .menu-right .search {
     position: relative;
 }
-
 .menu .menu-right #search-container {
     padding: 15px;
     background: #fff;
     z-index: 1;
     position: absolute;
-    top: 60px;
+    top: 70px;
     right: -70px;
     display: none;
     border: 1px solid #dfe3e8;
@@ -97,10 +99,10 @@
 .menu .menu-right #search-container:before {
     content: "";
     position: absolute;
-    top: -15px;
+    top: -25px;
     margin-top: -15px;
-    right: 70px;
-    border: solid 15px transparent;
+    right: 65px;
+    border: solid 20px transparent;
     border-bottom-color: #fff;
     z-index: 1;
 }
@@ -142,7 +144,7 @@
 /*Slide Show Begin*/
 
 #slideShow .mySlides {
-    margin-top: 102px;
+    margin-top: 122px;
     width: 100%;
     height: 500px;
     border-radius: 10px;
@@ -188,11 +190,12 @@
     color: #000000;
 }
 #footer> .container {
-    padding-top: 32px;
+    padding-top: 20px;
     padding-bottom: 16px;
 }
 #footer .about-us-footer .address p,
-#footer .product-footer p
+#footer .product-footer p,
+#footer .policy p
 {
     margin-bottom: 8px;
 }
@@ -205,7 +208,7 @@
     margin-right: 10px;
 }
 #footer .big-title-footer {
-    padding: 20px 0;
+    padding: 15px 0;
     position: relative;
 }
 #footer .big-title-footer::before {
@@ -215,7 +218,11 @@
     bottom: 20px;
     width: 50%;
     left: 0;
-    border-top: 3px solid #000000;
+    border-top: 2px solid #000000;
+}
+#footer .big-title-footer h4 {
+    font-size: 18px;
+    font-weight: 600;
 }
 #footer .copy-right {
     background: #494949;
