--- a/css/style.css
+++ b/css/style.css
@@ -40,8 +40,8 @@
     margin-top: 0;
 }
 #header .menu img {
-    width: 40px;
-    height: 40px;
+    width: 70px;
+    height: 50px;
 }
 .menu .drop-menu {
     list-style-type: none;
@@ -142,45 +142,26 @@
 /*Header End*/
 
 /*Slide Show Begin*/
-
-#slideShow .mySlides {
+#slideShow {
     margin-top: 122px;
+}
+#slideShow .mySlides {
     width: 100%;
-    height: 500px;
+    height: 600px;
     border-radius: 10px;
     opacity: 0.8;
 }
-/*#slideShow .leftSlide,*/
-/*#slideShow .rightSlide*/
-/*{*/
-/*    position: absolute;*/
-/*    top: 50%;*/
-/*}*/
-/*#slideShow .leftSlide {*/
-/*    left: 30px;*/
-/*}*/
-/*#slideShow .rightSlide {*/
-/*    right: 30px;*/
-/*}*/
-/*#slideShow .leftSlide i,*/
-/*#slideShow .rightSlide i*/
-/*{*/
-/*    padding: 5px;*/
-/*    border: 1px solid #ffffff;*/
-/*    border-radius: 50%;*/
-/*    color: #ffffff;*/
-/*    font-size: 30px;*/
-/*    opacity: 0.7;*/
-/*}*/
+
 #slideShow .dotList {
     position: absolute;
     bottom: 20px;
     left: 45%;
 }
 #slideShow .dotList .dot {
-    padding: 0 10px;
-    border: 1px solid #ffffff;
-    border-radius: 50%;
+    font-size: 8px;
+    padding: 0 5px;
+    background-color: white;
+    border-radius: 50px;
     margin: 0 10px;
 }
 /*Slide Show End*/
@@ -229,8 +210,22 @@
     color: white;
 }
 /*Footer End*/
+/*Back To Top Begin*/
+#back-to-top {
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+}
+#back-to-top .link-btt i{
+    color: #ffffff;
+    font-size: 20px;
+    line-height: 20px;
+    background-color: #5488c7;
+    border-radius: 5px;
+    padding: 10px 12px;
 
-
+}
+/*Back Top Top end*/
 /*Contact CSS*/
 /*Form Begin*/
 #content .contact_area .container{
@@ -238,8 +233,6 @@
 }
 
 #content .contact_area .container .row {
-    /*margin-left: 10px;*/
-    /*margin-right: 10px;*/
     margin-top: 20px;
     padding-left: 10px;
     padding-right: 10px;
