--- a/css/style.css
+++ b/css/style.css
@@ -586,3 +586,223 @@
 
 }
 
+/*Cart site*/
+#wrapper .container .cart .title{
+    margin-top: 120px;
+    width: 100%;
+    height: 80px;
+    display: inline-flex;
+    border: 1px solid gray;
+}
+
+#wrapper .container .cart .title h3{
+    font-size: 45px;
+    font-weight: bolder;
+    padding-top: 10px;
+    padding-left: 470px;
+}
+
+#wrapper .container .cart .title .return_button {
+    padding-left: 300px;
+    padding-top: 15px;
+}
+
+#wrapper .container .cart .title .return_button ul li{
+    background: #69a335;
+    /*padding: 10px 10px;*/
+    padding: 10px;
+    width: 120px;
+    /*font-size: 20px;*/
+    border-radius: 6px;
+    font-weight: bold;
+    border: 1px solid gray;
+    list-style: none;
+    text-align: center;
+}
+
+#wrapper .container .cart .title .return_button ul li a {
+    text-decoration: none;
+    color: black;
+}
+
+#wrapper .container .cart .title .return_button ul li:hover {
+    background: #ff7300;
+    padding-left: 30px;
+}
+
+
+#wrapper .container .cart .title_cart{
+    width: 100%;
+    height: 80px;
+    display: flex;
+}
+
+#wrapper .container .cart .title_cart{
+    font-size: 25px;
+    font-weight: 500;
+    justify-content: center;
+}
+
+#wrapper .container .cart .title_cart p{
+    padding-top: 20px;
+}
+
+#wrapper .container .cart .title_cart div{
+    flex-basis: 20%;
+    text-align: center;
+    border-left: 1px solid gray;
+}
+
+#wrapper .container .cart .title_cart div:nth-of-type(01){
+    flex-basis: 50%;
+}
+
+#wrapper .container .cart .title_cart .product_total{
+    border-right: 1px solid gray;
+}
+
+#wrapper .container .cart .product_contain{
+    padding-top: 20px;
+    width: 100%;
+    height: 300px;
+    display: flex;
+    border-top: 1px solid gray;
+    border-left: 1px solid gray;
+    border-right: 1px solid gray;
+}
+
+#wrapper .container .cart .product_contain div{
+    flex-basis: 20%;
+}
+
+#wrapper .container .cart .product_contain .image img{
+    width: 200px;
+    height: 200px;
+}
+
+#wrapper .container .cart .product_contain .product_details{
+    width: 300px;
+    height: 300px;
+    font-size: 25px;
+}
+
+#wrapper .container .cart .product_contain .product_details .name{
+    width: 300px;
+    padding-bottom: 20px;
+}
+
+#wrapper .container .cart .product_contain .product_details p{
+    font-size: 18px;
+}
+
+#wrapper .container .cart .product_contain .price{
+    padding-top: 60px;
+    margin-left: 50px;
+    width: 150px;
+    font-size: 20px;
+}
+
+#wrapper .container .cart .product_contain .quantity{
+    padding-top: 60px;
+    padding-left: 30px;
+    width: 100px;
+}
+
+#wrapper .container .cart .product_contain .quantity input{
+    width: 40px;
+    height: 25px;
+    border-radius: 6px;
+}
+
+#wrapper .container .cart .product_contain .quantity button{
+    height: 25px;
+    width: 25px;
+    border-radius: 6px;
+}
+
+#wrapper .container .cart .product_contain .total{
+    padding-top: 60px;
+    padding-left: 40px;
+    width: 100px;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+#wrapper .container .cart .total_price {
+    width: 100%;
+    height: 300px;
+    display: flex;
+    border-top: 1px solid gray;
+    padding-top: 60px;
+}
+
+#wrapper .container .cart .total_price div{
+    flex-basis: 50%;
+}
+
+#wrapper .container .cart .total_price .discount_code input{
+    border-radius: 6px;
+}
+
+#wrapper .container .cart .total_price .discount_code{
+    padding-left: 30px;
+    font-size: 20px;
+}
+
+#wrapper .container .cart .total_price .discount_code p{
+    font-size: 25px;
+    font-weight: 400;
+}
+
+#wrapper .container .cart .total_price .discount_code button{
+    width: 60px;
+    background: #69a335;
+    border-radius: 6px;
+    border: 1px solid gray;
+}
+
+#wrapper .container .cart .total_price .discount_code button:hover {
+    background: #ff7300;
+    padding-left: 20px;
+}
+
+#wrapper .container .cart .total_price .subtotal {
+    padding-left: 200px;
+}
+
+#wrapper .container .cart .total_price .subtotal ul li{
+    list-style: none;
+    font-size: 20px;
+    text-align: right;
+}
+
+#wrapper .container .cart .total_price .subtotal .value{
+    padding-left: 30px;
+    font-weight: 500;
+}
+
+#wrapper .container .cart .total_price .subtotal ul li a{
+    text-decoration: none;
+}
+
+#wrapper .container .cart .total_price .subtotal .totalRow_button{
+    padding-top: 20px;
+
+}
+
+#wrapper .container .cart .total_price .subtotal .btn_payment{
+    width: 100px;
+    height: 40px;
+    border-radius: 6px;
+    background: #69a335;
+    font-size: 20px;
+    font-weight: 600;
+    border: 1px solid gray;
+    color: black;
+    padding: 10px 20px;
+}
+
+#wrapper .container .cart .total_price .subtotal .btn_payment:hover {
+    opacity: 0.8;
+    /*color: #f8f8f8;*/
+}
