--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,12 @@
 .menu .menu-right .icon-item span {
     color: #000000;
 }
+
+.menu .menu-right .icon-item span a{
+    text-decoration: none;
+    color: black;
+}
+
 .menu .menu-right .icon-item span:hover {
     cursor: pointer;
 }
@@ -254,7 +260,7 @@
 }
 #content .product-item .product-image{
     width: 100%;
-    height: auto;
+    height: 150px;
     margin-bottom: 10px;
     border-radius: 10px;
 }
@@ -507,6 +513,7 @@
 #content .contact_area .container .row .contact_message #contact-form p input{
     padding: 10px 20px;
     border-radius: 6px;
+    outline: none;
 }
 
 #content .contact_area .container .row .contact_message #contact-form .contact_textarea{
@@ -587,12 +594,22 @@
 }
 
 /*Cart site*/
+#wrapper {
+    margin: 0;
+    padding: 0;
+    /*background: #e7e7e7;*/
+}
+#wrapper .container .cart {
+    margin-top: 100px;
+    margin-bottom: 50px;
+    background: white;
+}
 #wrapper .container .cart .title{
-    margin-top: 120px;
+    /*margin-top: 120px;*/
     width: 100%;
     height: 80px;
     display: inline-flex;
-    border: 1px solid gray;
+    border-bottom: 1px solid gray;
 }
 
 #wrapper .container .cart .title h3{
@@ -605,10 +622,11 @@
 #wrapper .container .cart .title .return_button {
     padding-left: 300px;
     padding-top: 15px;
+    color: white;
 }
 
 #wrapper .container .cart .title .return_button ul li{
-    background: #69a335;
+    background: #7AB730;
     /*padding: 10px 10px;*/
     padding: 10px;
     width: 120px;
@@ -622,7 +640,7 @@
 
 #wrapper .container .cart .title .return_button ul li a {
     text-decoration: none;
-    color: black;
+    color: white;
 }
 
 #wrapper .container .cart .title .return_button ul li:hover {
@@ -650,29 +668,35 @@
 #wrapper .container .cart .title_cart div{
     flex-basis: 20%;
     text-align: center;
-    border-left: 1px solid gray;
+    /*border-left: 1px solid gray;*/
 }
 
 #wrapper .container .cart .title_cart div:nth-of-type(01){
     flex-basis: 50%;
 }
 
-#wrapper .container .cart .title_cart .product_total{
-    border-right: 1px solid gray;
+#wrapper .container .cart .title_cart div:nth-of-type(05){
+    flex-basis: 5%;
+}
+
+#wrapper .container .cart .title_cart .product_details{
+    border-left: none;
 }
 
 #wrapper .container .cart .product_contain{
-    padding-top: 20px;
+    padding-top: 25px;
     width: 100%;
-    height: 300px;
+    height: 250px;
     display: flex;
     border-top: 1px solid gray;
-    border-left: 1px solid gray;
-    border-right: 1px solid gray;
 }
 
 #wrapper .container .cart .product_contain div{
     flex-basis: 20%;
+}
+
+#wrapper .container .cart .product_contain div:nth-of-type(06){
+    flex-basis: 5%;
 }
 
 #wrapper .container .cart .product_contain .image img{
@@ -697,14 +721,14 @@
 
 #wrapper .container .cart .product_contain .price{
     padding-top: 60px;
-    margin-left: 50px;
+    margin-left: 30px;
     width: 150px;
     font-size: 20px;
 }
 
 #wrapper .container .cart .product_contain .quantity{
     padding-top: 60px;
-    padding-left: 30px;
+    padding-left: 40px;
     width: 100px;
 }
 
@@ -712,6 +736,7 @@
     width: 40px;
     height: 25px;
     border-radius: 6px;
+    outline: none;
 }
 
 #wrapper .container .cart .product_contain .quantity button{
@@ -722,10 +747,21 @@
 
 #wrapper .container .cart .product_contain .total{
     padding-top: 60px;
-    padding-left: 40px;
+    padding-left: 20px;
     width: 100px;
     font-size: 20px;
     font-weight: 500;
+}
+
+#wrapper .container .cart .product_contain .remove{
+    padding-top: 60px;
+    padding-left: 20px;
+}
+
+#wrapper .container .cart .product_contain .remove button{
+    height: 25px;
+    width: 25px;
+    border-radius: 6px;
 }
 
 #wrapper .container .cart .total_price {
@@ -733,20 +769,21 @@
     height: 300px;
     display: flex;
     border-top: 1px solid gray;
-    padding-top: 60px;
+    padding-top: 50px;
 }
 
 #wrapper .container .cart .total_price div{
     flex-basis: 50%;
 }
 
-#wrapper .container .cart .total_price .discount_code input{
-    border-radius: 6px;
+#wrapper .container .cart .total_price .discount_code{
+    padding-left: 50px;
+    font-size: 20px;
 }
 
-#wrapper .container .cart .total_price .discount_code{
-    padding-left: 30px;
-    font-size: 20px;
+#wrapper .container .cart .total_price .discount_code input{
+    border-radius: 6px;
+    outline: none;
 }
 
 #wrapper .container .cart .total_price .discount_code p{
@@ -756,7 +793,8 @@
 
 #wrapper .container .cart .total_price .discount_code button{
     width: 60px;
-    background: #69a335;
+    background: #7AB730;
+    color: white;
     border-radius: 6px;
     border: 1px solid gray;
 }
@@ -767,7 +805,8 @@
 }
 
 #wrapper .container .cart .total_price .subtotal {
-    padding-left: 200px;
+    padding-left: 150px;
+    margin-right: 50px;
 }
 
 #wrapper .container .cart .total_price .subtotal ul li{
@@ -787,22 +826,39 @@
 
 #wrapper .container .cart .total_price .subtotal .totalRow_button{
     padding-top: 20px;
-
 }
 
 #wrapper .container .cart .total_price .subtotal .btn_payment{
     width: 100px;
     height: 40px;
     border-radius: 6px;
-    background: #69a335;
+    background: #7AB730;
     font-size: 20px;
     font-weight: 600;
     border: 1px solid gray;
-    color: black;
+    color: white;
     padding: 10px 20px;
 }
 
 #wrapper .container .cart .total_price .subtotal .btn_payment:hover {
     opacity: 0.8;
     /*color: #f8f8f8;*/
+}
+
+#wrapper .container .cart .total_price .subtotal .total_contain{
+    padding: 20px 20px;
+    border: 1px solid;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px gray;
+}
+
+#wrapper .container .cart .total_price .discount_code .discount_contain{
+    /*padding: 20px 20px;*/
+    padding-top: 20px;
+    padding-left: 30px;
+    width: 350px;
+    height: 140px;
+    border: 1px solid;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px gray;
 }
