--- a/css/style.css
+++ b/css/style.css
@@ -1029,3 +1029,57 @@
     border-radius: 8px;
     box-shadow: 0px 0px 10px gray;
 }
+/*Detail begin*/
+.detail-content {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: 50px -0px;
+}
+.detail-content .img {
+    width: 50%;
+    padding: 20px;
+}
+.detail-box-right {
+    width: 40%;
+    padding: 20px;
+    position: relative;
+}
+.detail-box-right h1 {
+    margin-left: 30px;
+    font-size: 30px;
+    background: lightgray;
+    border-radius: 6px;
+    color: red;
+}
+.detail-box-right h2 {
+    margin-left: 30px;
+    font-size: 15px;
+    color: lightgray;
+}
+.detail-box-right p {
+    background: gainsboro;
+    margin-left: 30px;
+    border-radius: 6px;
+    padding: 10px;
+}
+.detail-content .quantity {
+    margin-left: 130px;
+}
+.detail-content .quantity .minus, .plus {
+    width: 30px;
+    height: 30px;
+    background: orange;
+    text-align: center;
+    border: solid white 1px;
+    border-radius: 5px;
+}
+.quantity .add-to-cart-button {
+    width: 120px;
+    height: 30px;
+    text-align: center;
+    background: darkorange;
+    border: 0px;
+    border-radius: 5px;
+}
+/*Detail end*/
