--- a/css/style.css
+++ b/css/style.css
@@ -1083,3 +1083,400 @@
     border-radius: 5px;
 }
 /*Detail end*/
+/*Checkout Begin*/
+
+#checkout_content{
+    display: inline-flex;
+    height: 1100px;
+    width: 100%;
+}
+
+#checkout_content .container{
+    padding: 10px 40px;
+}
+
+
+#checkout_content .container div{
+    flex-basis: 80%;
+}
+
+#checkout_content .container div:nth-of-type(02){
+    flex-basis: 20%;
+}
+
+#checkout_content .container .checkout_cart {
+    margin-top: 120px;
+    background: white;
+    padding: 20px 50px;
+    width: 800px;
+    height: 600px;
+    box-shadow: 0px 4px 15px 6px #b4b4b4;
+    border: 1px solid;
+    border-radius: 10px;
+}
+#checkout_content .container .checkout_cart .title{
+    height: 50px;
+    width: 100%;
+    display: inline-flex;
+    border-bottom: 1px solid gray;
+}
+
+#checkout_content .container .checkout_cart .title h3{
+    font-weight: bolder;
+    padding-top: 0px;
+    padding-left: 320px;
+    font-size: 25px;
+}
+
+
+#checkout_content .container .checkout_cart .title .return_button ul li{
+    background: #7AB730;
+    padding: 8px;
+    width: 100px;
+    height: 30px;
+    border-radius: 6px;
+    font-weight: bold;
+    border: 1px solid gray;
+    list-style: none;
+    text-align: center;
+}
+
+#checkout_content .container .checkout_cart .title .return_button ul li a {
+    text-decoration: none;
+    color: white;
+}
+
+#checkout_content .container .checkout_cart .title .return_button ul li a i{
+    padding-left: 3px;
+}
+
+#checkout_content .container .checkout_cart .title .return_button ul li:hover {
+    background: #ff7300;
+    padding-left: 15px;
+}
+
+#checkout_content .container .checkout_cart .title_cart{
+    height: 50px;
+    display: flex;
+    padding-left: 30px;
+}
+
+#checkout_content .container .checkout_cart .title_cart{
+    font-weight: 500;
+    justify-content: center;
+}
+
+#checkout_content .container .checkout_cart .title_cart p{
+    padding-top: 20px;
+    font-size: 12px;
+}
+
+#checkout_content .container .checkout_cart .title_cart div{
+    flex-basis: 20%;
+    text-align: center;
+    /*border-left: 1px solid gray;*/
+}
+
+#checkout_content .container .checkout_cart .title_cart div:nth-of-type(01){
+    flex-basis: 50%;
+}
+
+#checkout_content .container .checkout_cart .title_cart .product_details{
+    border-left: none;
+}
+
+#checkout_content .container .checkout_cart .product_contain{
+    padding-top: 25px;
+    width: 100%;
+    height: 120px;
+    display: flex;
+    border-top: 1px solid gray;
+}
+
+#checkout_content .container .checkout_cart .product_contain div{
+    flex-basis: 20%;
+}
+
+#checkout_content .container .checkout_cart .product_contain div:nth-of-type(06){
+    flex-basis: 5%;
+}
+
+#checkout_content .container .checkout_cart .product_contain .image{
+    padding-left: 20px;
+    width: 30px;
+    height: 30px;
+}
+
+#checkout_content .container .checkout_cart .product_contain .image img{
+    width: 60px;
+    height: 60px;
+}
+
+#checkout_content .container .checkout_cart .product_contain .product_details{
+    width: 100px;
+    height: 60px;
+    font-size: 25px;
+}
+
+#checkout_content .container .checkout_cart .product_contain .product_details .name{
+    width: 100px;
+    padding-bottom: 10px;
+    font-size: 15px;
+}
+
+#checkout_content .container .checkout_cart .product_contain .product_details p{
+    font-size: 15px;
+}
+
+#checkout_content .container .checkout_cart .product_contain .price{
+    padding-top: 10px;
+    margin-left: 120px;
+    width: 150px;
+    font-size: 15px;
+}
+
+#checkout_content .container .checkout_cart .product_contain .quantity{
+    padding-top: 5px;
+    padding-left: 40px;
+    width: 100px;
+}
+
+#checkout_content .container .checkout_cart .product_contain .quantity input{
+    width: 30px;
+    height: 20px;
+    border-radius: 6px;
+    outline: none;
+}
+
+#checkout_content .container .checkout_cart .product_contain .quantity button{
+    height: 25px;
+    width: 25px;
+    border-radius: 6px;
+}
+
+#checkout_content .container .checkout_cart .product_contain .total{
+    padding-top: 10px;
+    padding-left: 10px;
+    width: 140px;
+    font-size: 15px;
+    font-weight: 700;
+}
+
+#checkout_content .container .checkout_cart .total_price {
+    width: 100%;
+    height: 200px;
+    display: flex;
+    border-top: 1px solid gray;
+    padding-top: 20px;
+}
+
+#checkout_content .container .checkout_cart .total_price div{
+    flex-basis: 50%;
+}
+
+#checkout_content .container .checkout_cart .total_price .discount_code{
+    padding-left: 50px;
+    font-size: 20px;
+}
+
+#checkout_content .container .checkout_cart .total_price .discount_code input{
+    border-radius: 6px;
+    outline: none;
+    width: 150px;
+}
+
+#checkout_content .container .checkout_cart .total_price .discount_code p{
+    font-size: 15px;
+    font-weight: 400;
+}
+
+#checkout_content .container .checkout_cart .total_price .discount_code button{
+    width: 60px;
+    background: #7AB730;
+    color: white;
+    border-radius: 6px;
+    border: 1px solid gray;
+}
+
+#checkout_content .container .checkout_cart .total_price .discount_code button:hover {
+    background: #ff7300;
+    padding-left: 20px;
+}
+
+#checkout_content .container .checkout_cart .total_price .discount_code .discount_contain{
+    padding-top: 20px;
+    padding-left: 15px;
+    width: 250px;
+    height: 120px;
+    border: 1px solid;
+    border-radius: 8px;
+    box-shadow: 0px 4px 15px 6px #b4b4b4;
+}
+
+#checkout_content .container .checkout_cart .total_price .subtotal {
+    padding-left: 100px;
+    margin-right: 50px;
+}
+
+#checkout_content .container .checkout_cart .total_price .subtotal ul li{
+    list-style: none;
+    font-size: 15px;
+    text-align: right;
+}
+
+#checkout_content .container .checkout_cart .total_price .subtotal .value{
+    padding-left: 10px;
+    font-weight: 500;
+}
+
+#checkout_content .container .checkout_cart .total_price .subtotal ul li a{
+    text-decoration: none;
+}
+
+
+#checkout_content .container .checkout_cart .total_price .subtotal .total_contain{
+    padding: 20px 20px;
+    border: 1px solid;
+    border-radius: 8px;
+    box-shadow: 0px 4px 15px 6px #b4b4b4;
+}
+
+
+
+
+
+#checkout_content .container .form_checkout{
+    width: 100%;
+    height: 1000px;
+    padding-left: 100px;
+    padding-top: 100px;
+    /*display: inline-flex;*/
+}
+
+#checkout_content .container .form_checkout{
+    padding-top: 120px;
+}
+
+#checkout_content .container .form_checkout .payment_form{
+    border: 1px solid;
+    border-radius: 10px;
+    box-shadow: 0px 4px 15px 6px #b4b4b4;
+}
+
+
+#checkout_content .container .form_checkout .form_title h3{
+    font-size: 30px;
+    padding-top: 20px;
+    padding-left: 50px;
+    padding-bottom: 10px;
+}
+
+#checkout_content .container .form_checkout .form_element{
+    padding-left: 30px;
+}
+
+#checkout_content .container .form_checkout .form_element label{
+    font-size: 20px;
+}
+
+#checkout_content .container .form_checkout .form_element input{
+    display: flex;
+    border-radius: 6px;
+    outline: none;
+    width: 400px;
+    height: 30px;
+    padding-left: 5px;
+}
+
+#checkout_content .container .form_checkout .form_address {
+    display: inline-flex;
+    padding-top: 20px;
+    padding-left: 30px;
+}
+
+#checkout_content .container .form_checkout .form_address label {
+    font-size: 20px;
+}
+
+#checkout_content .container .form_checkout .form_address input{
+    display: flex;
+    padding-left: 5px;
+    width: 220px;
+    border-radius: 6px;
+    outline: none;
+    margin-right: 25px;
+}
+
+#checkout_content .container .form_checkout .payment_option {
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+    padding-left: 40px;
+}
+
+#checkout_content .container .form_checkout .payment_option label{
+    padding-left: 10px;
+}
+
+#checkout_content .container .form_checkout .card_details {
+    display: inline-flex;
+}
+
+#checkout_content .container .form_checkout .card_details .details{
+    display: flex;
+    flex-direction: column;
+    padding-top: 10px;
+    padding-left: 30px;
+    margin-right: 30px;
+    font-size: 20px;
+
+}
+
+#checkout_content .container .form_checkout .card_details .details input{
+    width: 220px;
+    border-radius: 6px;
+    outline: none;
+    height: 30px;
+    padding-left: 5px;
+}
+
+#checkout_content .container .form_checkout .button_section{
+    display: inline-flex;
+    padding-top: 50px;
+    padding-left: 30px;
+    width: 600px;
+    height: 200px;
+}
+
+#checkout_content .container .form_checkout .button_section ul li{
+    list-style: none;
+    margin-bottom: 30px;
+}
+
+#checkout_content .container .form_checkout .button_section ul li:hover{
+    opacity: 0.8;
+}
+
+#checkout_content .container .form_checkout .button_section ul li .payment_button{
+    display: inline-flex;
+    background: #7AB730;
+    text-decoration: none;
+    color: white;
+    border-radius: 8px;
+    padding: 10px 47px;
+    font-size: 20px;
+    border: 1px solid black;
+}
+
+#checkout_content .container .form_checkout .button_section ul li .return_cart{
+    display: inline-flex;
+    background: #7AB730;
+    text-decoration: none;
+    color: white;
+    border-radius: 8px;
+    padding: 10px 20px;
+    font-size: 20px;
+    border: 1px solid black;
+}
+
+/*Checkout site End*/
