--- a/Admin/template/index.html
+++ b/Admin/template/index.html
@@ -198,7 +198,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../../index.html">
+            <a class="nav-link" href="../index.html">
               <i style="padding-right: 20px" class="mdi mdi-keyboard-return"></i>
               <span class="menu-title">Trở về web bán hàng</span>
             </a>
@@ -300,25 +300,25 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-7 grid-margin stretch-card">
-              <div class="card">
-                <div class="card-body">
-                  <p class="card-title">Biểu đồ thu nhập</p>
-                  <div id="cash-deposits-chart-legend" class="d-flex justify-content-center pt-3"></div>
-                  <canvas id="cash-deposits-chart"></canvas>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-5 grid-margin stretch-card">
-              <div class="card">
-                <div class="card-body">
-                  <p class="card-title">Tổng doanh thu</p>
-                  <h1>78.950.000 VND</h1>
-                  <h4>Tăng trưởng qua từng tháng</h4>
-                  <div id="total-sales-chart-legend"></div>                  
-                </div>
-                <canvas id="total-sales-chart"></canvas>
-              </div>
+<!--            <div class="col-md-7 grid-margin stretch-card">-->
+<!--              <div class="card">-->
+<!--                <div class="card-body">-->
+<!--                  <p class="card-title">Biểu đồ thu nhập</p>-->
+<!--                  <div id="cash-deposits-chart-legend" class="d-flex justify-content-center pt-3"></div>-->
+<!--                  <canvas id="cash-deposits-chart"></canvas>-->
+<!--                </div>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--            <div class="col-md-5 grid-margin stretch-card">-->
+<!--              <div class="card">-->
+<!--                <div class="card-body">-->
+<!--                  <p class="card-title">Tổng doanh thu</p>-->
+<!--                  <h1>78.950.000 VND</h1>-->
+<!--                  <h4>Tăng trưởng qua từng tháng</h4>-->
+<!--&lt;!&ndash;                  <div id="total-sales-chart-legend"></div>                  &ndash;&gt;-->
+<!--                </div>-->
+<!--                <canvas id="total-sales-chart"></canvas>-->
+<!--              </div>-->
             </div>
           </div>
           <div class="row">
@@ -377,12 +377,12 @@
         </div>
         <!-- content-wrapper ends -->
         <!-- partial:partials/_footer.html -->
-        <footer class="footer">
-        <div class="d-sm-flex justify-content-center justify-content-sm-between">
-          <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © <a href="https://www.bootstrapdash.com/" target="_blank">bootstrapdash.com </a>2021</span>
-          <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Only the best <a href="https://www.bootstrapdash.com/" target="_blank"> Bootstrap dashboard  </a> templates</span>
-        </div>
-        </footer>
+<!--        <footer class="footer">-->
+<!--        <div class="d-sm-flex justify-content-center justify-content-sm-between">-->
+<!--          <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © <a href="https://www.bootstrapdash.com/" target="_blank">bootstrapdash.com </a>2021</span>-->
+<!--          <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Only the best <a href="https://www.bootstrapdash.com/" target="_blank"> Bootstrap dashboard  </a> templates</span>-->
+<!--        </div>-->
+<!--        </footer>-->
         <!-- partial -->
       </div>
       <!-- main-panel ends -->
