--- a/Admin/template/pages/samples/lock-screen.html
+++ b/Admin/template/pages/samples/lock-screen.html
@@ -7,15 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Admin</title>
   <!-- plugins:css -->
-  <link rel="stylesheet" href="../../vendors/mdi/css/materialdesignicons.min.css">
-  <link rel="stylesheet" href="../../vendors/base/vendor.bundle.base.css">
+  <link rel="stylesheet" href="vendors/mdi/css/materialdesignicons.min.css">
+  <link rel="stylesheet" href="vendors/base/vendor.bundle.base.css">
   <!-- endinject -->
   <!-- plugin css for this page -->
   <!-- End plugin css for this page -->
   <!-- inject:css -->
-  <link rel="stylesheet" href="../../css/style.css">
+  <link rel="stylesheet" href="../../../css/style.css">
   <!-- endinject -->
-  <link rel="shortcut icon" href="../../images/logoShopKey.png" />
+  <link rel="shortcut icon" href="images/logoShopKey.png" />
 </head>
 
 <body>
@@ -25,14 +25,14 @@
         <div class="row w-100">
           <div class="col-lg-4 mx-auto">
             <div class="auth-form-transparent text-left p-5 text-center">
-              <img src="../../images/img.png" class="lock-profile-img" alt="img">
+              <img src="images/img.png" class="lock-profile-img" alt="img">
               <form class="pt-5">
 <!--                <div class="form-group">-->
 <!--                  <label for="examplePassword1">Password to unlock</label>-->
 <!--                  <input type="password" class="form-control text-center" id="examplePassword1" placeholder="Password">-->
 <!--                </div>-->
                 <div class="mt-5">
-                  <a class="btn btn-block btn-success btn-lg font-weight-medium" href="../../index.html">Mở khóa</a>
+                  <a class="btn btn-block btn-success btn-lg font-weight-medium" href="../../../index.html">Mở khóa</a>
                 </div>
                 <div class="mt-3 text-center">
                   <a href="#" class="auth-link text-white">Đăng nhập vào tài khoản khác</a>
@@ -48,12 +48,12 @@
   </div>
   <!-- container-scroller -->
   <!-- plugins:js -->
-  <script src="../../vendors/base/vendor.bundle.base.js"></script>
+  <script src="vendors/base/vendor.bundle.base.js"></script>
   <!-- endinject -->
   <!-- inject:js -->
-  <script src="../../js/off-canvas.js"></script>
-  <script src="../../js/hoverable-collapse.js"></script>
-  <script src="../../js/template.js"></script>
+  <script src="js/off-canvas.js"></script>
+  <script src="js/hoverable-collapse.js"></script>
+  <script src="js/template.js"></script>
   <!-- endinject -->
 </body>
 
