--- a/Admin/template/pages/samples/register.html
+++ b/Admin/template/pages/samples/register.html
@@ -7,15 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Admin</title>
   <!-- plugins:css -->
-  <link rel="stylesheet" href="../../vendors/mdi/css/materialdesignicons.min.css">
-  <link rel="stylesheet" href="../../vendors/base/vendor.bundle.base.css">
+  <link rel="stylesheet" href="vendors/mdi/css/materialdesignicons.min.css">
+  <link rel="stylesheet" href="vendors/base/vendor.bundle.base.css">
   <!-- endinject -->
   <!-- plugin css for this page -->
   <!-- End plugin css for this page -->
   <!-- inject:css -->
-  <link rel="stylesheet" href="../../css/style.css">
+  <link rel="stylesheet" href="../../../css/style.css">
   <!-- endinject -->
-  <link rel="shortcut icon" href="../../images/logoShopKey.png" />
+  <link rel="shortcut icon" href="images/logoShopKey.png" />
 </head>
 
 <body>
@@ -26,7 +26,7 @@
           <div class="col-lg-4 mx-auto">
             <div class="auth-form-light text-left py-5 px-4 px-sm-5">
               <div class="brand-logo">
-                <img style="height: 70px; width: 70px;" src="../../images/logoShopKey.png" alt="logo">
+                <img style="height: 70px; width: 70px;" src="images/logoShopKey.png" alt="logo">
               </div>
               <h4>Chào mừng bạn đã đến với Hạc Key</h4>
               <h6 class="font-weight-light">Đăng nhập để tiếp tục</h6>
@@ -52,10 +52,10 @@
                   </div>
                 </div>
                 <div class="mt-3">
-                  <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" href="../../index.html">ĐĂNG KÝ</a>
+                  <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" href="../../../index.html">ĐĂNG KÝ</a>
                 </div>
                 <div class="text-center mt-4 font-weight-light">
-                  Đã có tài khoản? <a href="login.html" class="text-primary">Đăng nhập ngay</a>
+                  Đã có tài khoản? <a href="pages/samples/login.html" class="text-primary">Đăng nhập ngay</a>
                 </div>
               </form>
             </div>
@@ -68,12 +68,12 @@
   </div>
   <!-- container-scroller -->
   <!-- plugins:js -->
-  <script src="../../vendors/base/vendor.bundle.base.js"></script>
+  <script src="vendors/base/vendor.bundle.base.js"></script>
   <!-- endinject -->
   <!-- inject:js -->
-  <script src="../../js/off-canvas.js"></script>
-  <script src="../../js/hoverable-collapse.js"></script>
-  <script src="../../js/template.js"></script>
+  <script src="js/off-canvas.js"></script>
+  <script src="js/hoverable-collapse.js"></script>
+  <script src="js/template.js"></script>
   <!-- endinject -->
 </body>
 
